--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 
-<h4> Welcome to Modern College Website</h4>
+<h2> Welcome to Modern College Website</h2>
 
 <h3> This is second Message</h3>
-
+<h2> h2 tag</h2>
 <h4> Added h4 tag and deleted h2 tag</h4>
 
